--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "arielmejiadev/larapex-charts": "dev-master",
         "blade-ui-kit/blade-heroicons": "^2.3",
         "khatabwedaa/blade-css-icons": "^1.4",
         "laravel/framework": "^11.0",
